# h2g_decode

./: .gitignore  CMakeLists.txt  Makefile  README.md  decode_performance.ipynb  event_aligner.cxx  event_aligner.h  file_stream.cxx  file_stream.h  h2g_decode.cxx  line_builder.cxx  line_builder.h  logbook.csv  make_mapping.cxx  run_decoder.cxx  run_decoder.h  tree_writer.cxx  tree_writer.h  waveform_builder.cxx  waveform_builder.h
analysis/: draw_waveforms.cxx  fit_mip.cxx  lfhcal_hgcroc.mapping  waveform_fitting.ipynb
src/: debug_logger.cxx  debug_logger.h  event_aligner.cxx  event_aligner.h  file_stream.cxx  file_stream.h  h2g_decode.cxx  hgc_decoder.cxx  hgc_decoder.h  line_builder.cxx  line_builder.h  run_decoder.cxx  stat_logger.cxx  stat_logger.h  tree_writer.cxx  tree_writer.h  waveform_builder.cxx  waveform_builder.h
